SDK: Fix native scroll flash after closing context menu on mobile

--- a/packages/sdk/src/styles/globals.scss
+++ b/packages/sdk/src/styles/globals.scss
@@ -41,6 +41,8 @@ body {
 
   padding: 0;
   margin: 0;
+
+  overflow: hidden;
 }
 
 #root {
